src/objects/Sales_Team_Hierarchy_VP__c.object
<CustomObject>
    <fields>
        <fullName>FY_Adjusted_Target__c</fullName>
        <formula>Q1_Adjusted_Target__c + Q2_Adjusted_Target__c + Q3_Adjusted_Target__c + Q4_Adjusted_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Adjusted Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Offset__c</fullName>
        <formula>Q1_Offset__c + Q2_Offset__c + Q3_Offset__c + Q4_Offset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Hierarchy Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Q1_Adjusted_Target__c</fullName>
        <label>Q1 Adjusted Target</label>
        <summarizedField>Sales_Team_Hierarchy_ST__c.Q1_Adjusted_Target__c</summarizedField>
        <summaryForeignKey>Sales_Team_Hierarchy_ST__c.VP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q1_Offset__c</fullName>
        <label>Q1 Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Adjusted_Target__c</fullName>
        <label>Q2 Adjusted Target</label>
        <summarizedField>Sales_Team_Hierarchy_ST__c.Q2_Adjusted_Target__c</summarizedField>
        <summaryForeignKey>Sales_Team_Hierarchy_ST__c.VP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q2_Offset__c</fullName>
        <label>Q2 Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_Adjusted_Target__c</fullName>
        <label>Q3 Adjusted Target</label>
        <summarizedField>Sales_Team_Hierarchy_ST__c.Q3_Adjusted_Target__c</summarizedField>
        <summaryForeignKey>Sales_Team_Hierarchy_ST__c.VP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q3_Offset__c</fullName>
        <label>Q3 Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Team</fullName>
                </value>
                <value>
                    <fullName>Sales Specialist</fullName>
                </value>
                <value>
                    <fullName>I&amp;A Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VP_Code__c</fullName>
        <label>VP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Name__c</fullName>
        <label>VP Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_PeopleSoft_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid PeopleSoft Id</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Team Hierarchy - VP</label>
    <nameField>
        <label>Sales Team Hierarchy - VP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Team Hierarchy - VP&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>